--- a/DealerPersonalAccount/Views/Shared/_Layout.cshtml
+++ b/DealerPersonalAccount/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
             </div>
             <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
                 <ul class="navbar-nav flex-grow-1">
-                    <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Operator", "Index", "Operator", new { area = "" }, new { @class = "nav-link" })</li>
                 </ul>
             </div>
         </div>
