--- a/DealerPersonalAccount/Views/Shared/_Layout.cshtml
+++ b/DealerPersonalAccount/Views/Shared/_Layout.cshtml
@@ -28,6 +28,8 @@
             <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
                 <ul class="navbar-nav flex-grow-1">
                     <li>@Html.ActionLink("Operator", "Index", "Operator", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Users", "Index", "User", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Agents", "Agents", "User", new { area = "" }, new { @class = "nav-link" })</li>
                 </ul>
             </div>
         </div>
