added payment vms. views, controller, repository

--- a/DealerPersonalAccount/Views/Shared/_Layout.cshtml
+++ b/DealerPersonalAccount/Views/Shared/_Layout.cshtml
@@ -30,6 +30,7 @@
                     <li>@Html.ActionLink("Operator", "Index", "Operator", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Users", "Index", "User", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Agents", "Agents", "User", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Payments", "Index", "Payment", new { area = "" }, new { @class = "nav-link" })</li>
                 </ul>
             </div>
         </div>
