--- a/DealerPersonalAccount/Views/User/Index.cshtml
+++ b/DealerPersonalAccount/Views/User/Index.cshtml
@@ -17,6 +17,9 @@
         <th>
             @Html.DisplayNameFor(model => model.CreationDateTime)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Role)
+        </th>
         <th></th>
     </tr>
 
@@ -29,7 +32,10 @@
             @Html.DisplayFor(modelItem => item.CreationDateTime)
         </td>
         <td>
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            @Html.DisplayFor(modelItem => item.RoleString)
+        </td>
+        <td>
+            @Html.ActionLink("Delete", "Delete", new { id = item.Id })
         </td>
     </tr>
 }
